--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,11 @@
 <body id="page-top" class="index">
   {% include nav.html %}
   {% include header.html %}
-  {% include portfolio_grid.html %}
   {% include about.html %}
+  {% include portfolio_grid.html %}
+  {% include teaching.html %}
+  {% include cv.html %}
+  {% include wanderlust.html %}
 
   {% if site.contact == "static" %}
   {% include contact_static.html %}
