--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,10 +19,19 @@
           <a href="#page-top"></a>
         </li>
         <li class="page-scroll">
+          <a href="#about">About</a>
+        </li>
+        <li class="page-scroll">
           <a href="#portfolio">Portfolio</a>
         </li>
         <li class="page-scroll">
-          <a href="#about">About</a>
+          <a href="#teaching">Teaching</a>
+        </li>
+        <li class="page-scroll">
+          <a href="#cv">CV</a>
+        </li>
+        <li class="page-scroll">
+          <a href="#wanderlust">Wanderlust</a>
         </li>
         <li class="page-scroll">
           <a href="#contact">Contact</a>
