--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -1,7 +1,13 @@
 <section class="bg-light page-section" id="cv">
   <div class="container">
-    <h2 class="text-center text-uppercase text-secondary mb-0">CV</h2>
+    <h2 class="text-center text-uppercase text-secondary mb-0">Curriculum Vitae</h2>
     <hr class="star-dark mb-5">
-    <p class="text-center">Here’s where I will put my CV once I'm done with it</p>
+    <div class="embed-responsive embed-responsive-4by3">
+      <iframe class="embed-responsive-item" src="/img/cv.pdf" width="100%" height="600px">
+        This browser does not support PDFs. Please download the PDF to view it:
+        <a href="/img/cv.pdf">Download CV</a>.
+      </iframe>
+    </div>
   </div>
 </section>
+
