--- a/_includes/summary.html
+++ b/_includes/summary.html
@@ -1,7 +1,20 @@
 <section class="bg-light page-section" id="summary">
   <div class="container">
-    <h2 class="text-center text-uppercase text-secondary mb-0">Summary</h2>
-    <hr class="star-dark mb-5">
-    <p class="text-center">I am currently a second year PhD student in linguistics at UC Davis. My primary research specialty lies within phonetics and its derivatives; I have a particular proclivity toward speech perception and production, and I have several current ongoing projects that you can view below. </p>
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>About</h2>
+        <hr class="star-light">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 col-lg-offset-2">
+        <p>I am currently a second year PhD student in linguistics at UC Davis. My primary research specialty lies within phonetics and its derivatives; 
+          I have a particular proclivity toward speech perception and production, and I have several current ongoing projects that you can view below.</p>
+      </div>
+      <div class="col-lg-4">
+        <p>Outside of strictly academic research, I am a huge advocate for teaching, the state of education in the world, effective writing and learning 
+        in a generative AI world, and of course, traveling! </p>
+      </div>
+    </div>
   </div>
 </section>
