--- a/_includes/summary.html
+++ b/_includes/summary.html
@@ -2,8 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>About</h2>
-        <hr class="star-light">
+        <h2>Summary</h2>
       </div>
     </div>
     <div class="row">
