--- a/_includes/summary.html
+++ b/_includes/summary.html
@@ -14,6 +14,9 @@
         <p>Outside of strictly academic research, I am a huge advocate for teaching, the state of education in the world, effective writing and learning 
         in a generative AI world, and of course, traveling! </p>
       </div>
+      <div class="col-lg-4">
+        <p>Please enjoylooking around my website and perusing my posts. Please reach out to me if you have quesions or perhaps have a research opportunity that needs another set of hands! </p>
+      </div>
     </div>
   </div>
 </section>
