--- a/_includes/summary.html
+++ b/_includes/summary.html
@@ -11,11 +11,8 @@
           I have a particular proclivity toward speech perception and production, and I have several current ongoing projects that you can view below.</p>
       </div>
       <div class="col-lg-4">
-        <p>Outside of strictly academic research, I am a huge advocate for teaching, the state of education in the world, effective writing and learning 
-        in a generative AI world, and of course, traveling! </p>
-      </div>
-      <div class="col-lg-4 col-lg-offset-4">
-        <p>Please enjoylooking around my website and perusing my posts. Please reach out to me if you have quesions or perhaps have a research opportunity that needs another set of hands! </p>
+        <p>Outside of strictly academic endeavors, I am a huge advocate for teaching, the state of education in the world, effective writing and learning 
+        in a generative AI world, equitable access to knowledge, and of course, traveling! Please reach out to me for any reason via the contact below. </p>
       </div>
     </div>
   </div>
