--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   {% include wanderlust.html %}
 
   # {% if site.contact == "static" %}
-  {% include contact_me.html %}
+  {% include contact.html %}
   # {% elsif site.contact == "disqus" %}
   # {% include contact_disqus.html %}
   # {% else %}
