--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,10 @@
           <a href="#page-top"></a>
         </li>
         <li class="page-scroll">
-          <a href="#portfolio">Portfolio</a>
+          <a href="#summary">Summary</a>
+        </li>
+        <li class="page-scroll">
+          <a href="#portfolio">Research</a>
         </li>
         <li class="page-scroll">
           <a href="#teaching">Teaching</a>
