--- a/_includes/wanderlust.html
+++ b/_includes/wanderlust.html
@@ -1,7 +1,25 @@
-<section class="bg-light page-section" id="wanderlust">
-  <div class="container">
-    <h2 class="text-center text-uppercase text-secondary mb-0">Wanderlust</h2>
-    <hr class="star-dark mb-5">
-    <p class="text-center">Here’s where I talk about my travelling experience</p>
+<!-- Wanderlust Grid Section -->
+<section id="wanderlust">
+  <div class="container wanderlust-flex-grid">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>Wanderlust</h2>
+        <hr class="star-primary">
+      </div>
+    </div>
+    <div class="wanderlust-flex-row">
+      {% for post in site.wanderlust %}
+      <div class="wanderlust-flex-item wanderlust-item">
+        <a href="#wanderlustModal-{{ post.modal-id }}" class="wanderlust-link" data-toggle="modal">
+          <div class="caption">
+            <div class="caption-content">
+              <i class="fa fa-search-plus fa-3x"></i>
+            </div>
+          </div>
+          <img src="img/wanderlust/{{ post.img }}" class="img-responsive square-img" alt="{{ post.alt }}">
+        </a>
+      </div>
+      {% endfor %}
+    </div>
   </div>
 </section>
