--- a/_includes/wanderlust.html
+++ b/_includes/wanderlust.html
@@ -1,25 +1,25 @@
 <!-- Wanderlust Grid Section -->
-<section id="wanderlust">
-  <div class="container wanderlust-flex-grid">
+<section id="portfolio">
+  <div class="container portfolio-flex-grid">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2>Wanderlust</h2>
         <hr class="star-primary">
       </div>
     </div>
-    <div class="wanderlust-flex-row">
-      {% for post in site.wanderlust %}
-      <div class="wanderlust-flex-item wanderlust-item">
-        <a href="#wanderlustModal-{{ post.modal-id }}" class="wanderlust-link" data-toggle="modal">
-          <div class="caption">
-            <div class="caption-content">
-              <i class="fa fa-search-plus fa-3x"></i>
-            </div>
-          </div>
-          <img src="img/wanderlust/{{ post.img }}" class="img-responsive square-img" alt="{{ post.alt }}">
-        </a>
-      </div>
-      {% endfor %}
+    <div class="portfolio-flex-row">
+    {% for post in site.wanderlust %}
+      <div class="portfolio-flex-item portfolio-item">
+        <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+          <div class="caption">
+            <div class="caption-content">
+              <i class="fa fa-search-plus fa-3x"></i>
+            </div>
+          </div>
+          <img src="img/portfolio/{{ post.img }}" class="img-responsive square-img" alt="{{ post.alt }}">
+        </a>
+      </div>
+    {% endfor %}
     </div>
   </div>
 </section>
