--- a/_includes/wanderlust.html
+++ b/_includes/wanderlust.html
@@ -1,5 +1,5 @@
 <!-- Wanderlust Grid Section -->
-<section id="portfolio">
+<section id="wanderlust">
   <div class="container portfolio-flex-grid">
     <div class="row">
       <div class="col-lg-12 text-center">
