--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
   {% include portfolio_grid.html %}
   {% include teaching.html %}
   {% include cv.html %}
+  <pre>{{ site.wanderlust | inspect }}</pre>
+
   {% include wanderlust.html %}
 
   {% include contact.html %}
