--- a/_includes/wanderlust.html
+++ b/_includes/wanderlust.html
@@ -1,25 +1,46 @@
-<!-- Wanderlust Grid Section -->
-<section id="wanderlust">
-  <div class="container portfolio-flex-grid">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2>Wanderlust</h2>
-        <hr class="star-primary">
+<!-- _includes/wanderlust.html -->
+## Wanderlust
+* * *
+
+<div class="row">
+  {% for post in site.data.wanderlust %}
+  <div class="col-sm-4 portfolio-item">
+    <a class="portfolio-link" data-toggle="modal"
+       href="#wanderlustModal{{ post.modal-id }}">
+      <div class="caption">
+        <div class="caption-content">
+          <i class="fa fa-search-plus fa-2x"></i>
+        </div>
       </div>
-    </div>
-    <div class="portfolio-flex-row">
-      {% for post in site.data.wanderlust %}
-      <div class="portfolio-flex-item portfolio-item">
-        <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
-          <div class="caption">
-            <div class="caption-content">
-              <i class="fa fa-search-plus fa-3x"></i>
-            </div>
-          </div>
-          <img src="img/portfolio/{{ post.img }}" class="img-responsive square-img" alt="{{ post.alt }}">
-        </a>
-      </div>
-      {% endfor %}
-    </div>
+      <img class="img-responsive" src="/img/portfolio/{{ post.img }}"
+           alt="{{ post.alt }}">
+    </a>
   </div>
-</section>
+  {% endfor %}
+</div>
+
+{% for post in site.data.wanderlust %}
+<div class="portfolio-modal modal fade"
+     id="wanderlustModal{{ post.modal-id }}" tabindex="-1"
+     role="dialog" aria-hidden="true">
+  <div class="modal-dialog"><div class="modal-content">
+    <div class="close-modal" data-dismiss="modal">
+      <div class="lr"><div class="rl"></div></div>
+    </div>
+    <div class="container">
+      <div class="row"><div class="col-lg-8 col-lg-offset-2">
+        <div class="modal-body">
+          <h2>{{ post.title }}</h2>
+          <hr class="star-primary">
+          <img class="img-responsive img-centered"
+               src="/img/portfolio/{{ post.img }}"
+               alt="{{ post.alt }}">
+          <p>{{ post.description }}</p>
+          <button type="button" class="btn btn-default"
+                  data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+        </div>
+      </div></div>
+    </div>
+  </div></div>
+</div>
+{% endfor %}
