--- a/_includes/wanderlust.html
+++ b/_includes/wanderlust.html
@@ -1,5 +1,5 @@
-<!-- Portfolio Grid Section -->
-<section id="portfolio">
+<!-- Wanderlust Grid Section -->
+<section id="wanderlust">
   <div class="container portfolio-flex-grid">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -8,15 +8,15 @@
       </div>
     </div>
     <div class="portfolio-flex-row">
-      {% for post in site.posts %}
+      {% for item in site.wanderlust %}
       <div class="portfolio-flex-item portfolio-item">
-        <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+        <a href="#portfolioModal-{{ item.modal-id }}" class="portfolio-link" data-toggle="modal">
           <div class="caption">
             <div class="caption-content">
               <i class="fa fa-search-plus fa-3x"></i>
             </div>
           </div>
-          <img src="img/portfolio/{{ post.img }}" class="img-responsive square-img" alt="{{ post.alt }}">
+          <img src="img/portfolio/{{ item.img }}" class="img-responsive square-img" alt="{{ item.alt }}">
         </a>
       </div>
       {% endfor %}
