--- a/_includes/wanderlust.html
+++ b/_includes/wanderlust.html
@@ -16,7 +16,7 @@
               <i class="fa fa-search-plus fa-3x"></i>
             </div>
           </div>
-          <img src="img/portfolio/{{ item.img }}" class="img-responsive square-img" alt="{{ item.alt }}">
+          <img src="/img/portfolio/{{ item.img }}" class="img-responsive square-img" alt="{{ item.alt }}">
         </a>
       </div>
       {% endfor %}
