--- a/_includes/wanderlust.html
+++ b/_includes/wanderlust.html
@@ -1,4 +1,3 @@
-<!-- Wanderlust Grid Section -->
 <section id="wanderlust">
   <div class="container portfolio-flex-grid">
     <div class="row">
@@ -7,6 +6,8 @@
         <hr class="star-primary">
       </div>
     </div>
+
+    <!-- portfolio grid -->
     <div class="portfolio-flex-row">
       {% for item in site.wanderlust %}
       <div class="portfolio-flex-item portfolio-item">
@@ -16,10 +17,26 @@
               <i class="fa fa-search-plus fa-3x"></i>
             </div>
           </div>
-          <img src="/img/portfolio/{{ item.img }}" class="img-responsive square-img" alt="{{ item.alt }}">
+          <img src="/img/portfolio/{{ item.img }}" class="img-responsive square-img" alt="{{ item.alt }}"> 
         </a>
       </div>
       {% endfor %}
-    </div>
-  </div>
-</section>
+    </div><!-- portfolio grid -->
+
+    <!-- portfolio modals -->
+    {% for item in site.wanderlust %}
+      <div id="portfolioModal-{{ item.modal-id }}"
+           class="modal fade">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <h2>{{ item.title }}</h2>
+            <img src="/img/portfolio/{{ item.img }}"
+                 alt="{{ item.alt }}"> 
+            <p>{{ item.description }}</p>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
+
+  </div><!-- .container -->
+</section><!-- #wanderlust -->
