--- a/_includes/wanderlust.html
+++ b/_includes/wanderlust.html
@@ -1,4 +1,4 @@
-<section id="portfolio">
+<section id="wanderlust">
   <div class="container portfolio-flex-grid">
     <div class="row">
       <div class="col-lg-12 text-center">
