--- a/_includes/wanderlust.html
+++ b/_includes/wanderlust.html
@@ -23,6 +23,9 @@
       {% endfor %}
     </div><!-- portfolio grid -->
 
+    
+    <pre>{{ site.wanderlust | jsonify }}</pre>
+
     <!-- portfolio modals -->
     {% for item in site.wanderlust %}
       <div id="portfolioModal-{{ item.modal-id }}"
