--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,12 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="feed.xml">
 
   <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-  <link rel="stylesheet" href="{{ " style.css" }}">
+  <style>
+  {% include css/main.css %}
+  </style>
+
+  <!--     <link rel="stylesheet" href="{{ " style.css" }}">      -->
+
 
   <!-- Google verification -->
   {% if site.google_verify %}
