--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,11 +11,7 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="feed.xml">
 
   <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-  <style>
-  {% include css/main.css %}
-  </style>
-
-  <!--     <link rel="stylesheet" href="{{ " style.css" }}">      -->
+  <link rel="stylesheet" href="{{ " style.css" }}">
 
 
   <!-- Google verification -->
