--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,8 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="feed.xml">
 
   <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-  <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/css/wanderlust.css' | relative_url }}">
+  
   <link rel="stylesheet" href="{{ " style.css" }}">
 
 
