--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -2,6 +2,12 @@
   <div class="container">
     <h2 class="text-center text-uppercase text-secondary mb-0">Teaching</h2>
     <hr class="star-dark mb-5">
-    <p class="text-center">Here’s where I talk about my teaching experience...</p>
+    <p class="text-center">Please enjoy reading my statement of teaching philosophy in the pdf below. </p>
+    <div class="embed-responsive embed-responsive-4by3">
+      <iframe class="embed-responsive-item" src="/img/teaching.pdf" width="100%" height="600px">
+        This browser does not support PDFs. Please download the PDF to view it:
+        <a href="/img/teaching.pdf">Download Teaching Philosophy</a>.
+      </iframe>
+    </div>
   </div>
 </section>
