--- a/_includes/wanderlust.html
+++ b/_includes/wanderlust.html
@@ -4,6 +4,7 @@
       <div class="col-lg-12 text-center">
         <h2>Wanderlust</h2>
         <hr class="star-primary">
+        <p class="text-center">Please disregard this section for now, it is not functioning. When it's complete, it will be a travel blog section recounting many of my travels that I want to share with the world. </p>
       </div>
     </div>
 
