--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,6 +4,7 @@
       <div class="col-lg-12 text-center">
         <h2>Contact Me</h2>
         <hr class="star-primary">
+        <p class="text-center">This contact form IS working, though. </p>
       </div>
     </div>
     <div class="row">
