--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -483,3 +483,16 @@ footer .footer-below {
     -webkit-transform: translateZ(0);
 }
 
+img.profile-pic {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+  img.profile-pic {
+    max-width: 800px;
+  }
+}
+
