--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -2,8 +2,8 @@
   <div class="container">
     <h2 class="text-center text-uppercase text-secondary mb-0">Curriculum Vitae</h2>
     <hr class="star-dark mb-5">
-    <div class="embed-responsive embed-responsive-4by3">
-      <iframe class="embed-responsive-item" src="/img/cv.pdf" width="100%" height="600px">
+    <div class="pdf-container">
+      <iframe src="/img/cv.pdf" width="100%" height="600px">
         This browser does not support PDFs. Please download the PDF to view it:
         <a href="/img/cv.pdf">Download CV</a>.
       </iframe>
