--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -496,3 +496,14 @@ img.profile-pic {
   }
 }
 
+.pdf-container {
+  width: 100%;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch; /* for smooth scrolling on iOS */
+}
+
+.pdf-container iframe {
+  width: 100%;
+  height: 600px;
+  border: none;
+}
