--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -507,3 +507,17 @@ img.profile-pic {
   height: 600px;
   border: none;
 }
+
+.mobile-cv-note {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .pdf-container {
+    display: none;
+  }
+  .mobile-cv-note {
+    display: block;
+    margin-top: 20px;
+  }
+}
