--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -2,12 +2,23 @@
   <div class="container">
     <h2 class="text-center text-uppercase text-secondary mb-0">Curriculum Vitae</h2>
     <hr class="star-dark mb-5">
+
+    <!-- Embedded PDF for desktop -->
     <div class="pdf-container">
       <iframe src="/img/cv.pdf" width="100%" height="600px">
         This browser does not support PDFs. Please download the PDF to view it:
         <a href="/img/cv.pdf">Download CV</a>.
       </iframe>
     </div>
+
+    <!-- Mobile notice and download link -->
+    <div class="mobile-cv-note">
+      <p class="text-center">
+        PDF viewing may be limited on mobile.  
+        <a href="/img/cv.pdf" download class="btn btn-primary" target="_blank">Download CV</a>  
+        <br />
+        <small>Or <a href="/img/cv.pdf" target="_blank">view it in a new tab</a>.</small>
+      </p>
+    </div>
   </div>
 </section>
-
