--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -2,12 +2,24 @@
   <div class="container">
     <h2 class="text-center text-uppercase text-secondary mb-0">Teaching</h2>
     <hr class="star-dark mb-5">
-    <p class="text-center">Please enjoy reading my statement of teaching philosophy in the pdf below. </p>
-    <div class="embed-responsive embed-responsive-4by3">
-      <iframe class="embed-responsive-item" src="/img/teaching.pdf" width="100%" height="600px">
+    <p class="text-center">Please enjoy reading my statement of teaching philosophy in the PDF below.</p>
+
+    <!-- Embedded PDF viewer for desktop -->
+    <div class="pdf-container">
+      <iframe src="/img/teaching.pdf" width="100%" height="600px">
         This browser does not support PDFs. Please download the PDF to view it:
         <a href="/img/teaching.pdf">Download Teaching Philosophy</a>.
       </iframe>
+    </div>
+
+    <!-- Mobile message and download link -->
+    <div class="mobile-cv-note">
+      <p class="text-center">
+        PDF viewing may be limited on mobile.  
+        <a href="/img/teaching.pdf" download class="btn btn-primary" target="_blank">Download Teaching Philosophy</a>  
+        <br />
+        <small>Or <a href="/img/teaching.pdf" target="_blank">view it in a new tab</a>.</small>
+      </p>
     </div>
   </div>
 </section>
